# examples

./: .gitattributes  .gitignore  CLAUDE.md  DATA_SOURCES.md  DATA_SOURCES_SHARED.md  Dockerfile  JUPYTEXT_WORKFLOW.md  LICENSE  QUICKREF_NOTEBOOKS.md  README.md  SESSION_SUMMARY.md  STATUS.md  isamples_schema_review.md  package-lock.json  pyproject.toml  requirements.in  run_docker.sh
archive/defunct-api-client/isamples_client/: __init__.py
archive/defunct-api-client/isamples_client/sources/: __init__.py  base.py  geome.py  opencontext.py  smithsonian.py
archive/defunct-api-client/tests/: test_isbclient.py
archive/defunct-api-client/tests/test_sources/: __init__.py  test_clients.py
archive/export-parquet-tools/: README.md  generate_frontend_bundle.py  test_frontend_bundle.py
archive/planning/: CROSS_REPO_ALIGNMENT.md  ISAMPLES_MODEL_ACTION_PLAN.md  PQG_INTEGRATION_PLAN.md  SESSION_SUMMARY.md
basic/: ipydatagrid-learn.ipynb  ipyleaflet-learn.ipynb  isamples_get_post.py  isamples_vocab.ipynb  isbclient.py  record_counts.ipynb  record_counts_local.ipynb
binder/: requirements.txt
examples/: README.md
examples/basic/: PQG_WIDE_EXPLORATION.md  bone.xlsx  geoparquet.ipynb  geoparquet0.ipynb  hello_encode.js  ipydatagrid-learn.ipynb  ipyleaflet-learn.ipynb  isample-archive.ipynb  isamples_explorer.ipynb  isamples_get_post.py  isamples_vocab.ipynb  narrow_vs_wide_schema.ipynb  notebook_sections.md  oc_parquet_analysis.ipynb  oc_parquet_analysis_enhanced.ipynb  oc_parquet_analysis_enhanced.py  oc_parquet_documentation.md  oc_parquet_enhanced.qmd  package-lock.json  package.json  pgp.ipynb  pqg_demo.ipynb  quarto_sections.md  record_counts.ipynb  schema_comparison.ipynb  source_correlation.py  subset.py  zenodo_metadata.json
examples/basic/archive/: geoparquet0.ipynb  oc_parquet_analysis.ipynb  oc_parquet_analysis_enhanced.ipynb  pgp.ipynb  record_counts.ipynb  schema_benchmark_comprehensive.ipynb
examples/spatial/: bay_area_cities.parquet  cities.geoparquet  debugging_jupytext.ipynb  geoparquet_duckdb_tutorial.ipynb  geoparquet_duckdb_tutorial.md  isamples_geoparqet.ipynb
examples/spatial/archive/: cesium_points.ipynb
examples/spatial/src/: cesium_points.js
javascript/: stream.ipynb
playwright/: package.json  scrape-fields.js  scrape-fields.py
spatial/: cesium_points.ipynb  cesium_points_local.ipynb  geoparquet_duckdb_tutorial.ipynb  geoparquet_duckdb_tutorial.md  isamples_geoparqet.ipynb
spatial/src/: cesium_points.js
src/isamples_client/: __init__.py  isbclient.py
src/isamples_client/sources/: geome.py  opencontext.py  sesar.py
tests/: test_isbclient.py
